  EntityUtil.Validator moved to Entities
  AbstractFilteredTableModel.removeItems() improved a bit
  EntityConnectionImpl.insert(), improved readability and removed repeated calls to entity.getPrimaryKey(), the reasons for which have long since disappeared into the mists of time
  EntityConnectionImpl.update(),improved readability a bit
  EntityConnectionImpl, some more prettyfication
  ProgressReporter added
  EntityDataUtil.batchInsert() added
  EntityConnectionImpl.translateValue() bug fixed, Timestamp got translated into Date
  EntityTablePanel.setAdditionalPopupControls() renamed to addPopupControls()
  EntityTablePanel.setAdditionalToolbarControls() renamed to addToolbarControls()
  EntityPanelProvider/DefaultEntityModel, tableModel.setEditModel() revised
  EntityImpl, some minor value setting refactoring
  EntityPanel.addDetailPanel() now sets includeDetailPanelTabPane as true and adds the detail model to the underlying model
  EntityPanelProvider.createPanel() now checks if the underlying entityModel contains models for the detail panels
  EntityModel.getDetailModel(Class) no longer tries to auto create the model, since it does not have the required info (no entityID)
  EntityPanelProvider.createPanel() bug fixed (model.getDetailModel(DefaultEntityModel.class))
  UiUtil.linkToEnabledState() now affects the focusable state as well
  EntityUiUtil.createComboBox(), removed apparently redundant transferFocusOnEnter item
  ItemComboBoxModel implements Refreshable, initializeItems() protected
  DefaultEntityComboBoxModel.performQuery() is now overridable
  ValueChangeMapImpl.removeOriginalValue(), no longer notifies value change,
  ValueChangeMapImpl.originalValues nulled when emptied
  DefaultExceptionHandler.handleException() now unwraps RuntimeException and InvocationTargetException
  EntityApplicationPanel navigation bugs fixed, needs rethinking
  EntityCriteriaUtil, small improvements
  Entities.entityInstance/keyInstance renamed to entity/key