@@ -2263,3 +2263,4 @@
   EntityApplicationPanel navigation bugs fixed, needs rethinking
   EntityCriteriaUtil, small improvements
   Entities.entityInstance/keyInstance renamed to entity/key
+  Entity.isNull() renamed to isPrimaryKeyNull()
